reference/5.1/Microsoft.PowerShell.Utility/Microsoft.PowerShell.Utility.md
---
Download Help Link: https://go.microsoft.com/fwlink/?linkid=390787
Help Version: 5.2.0.0
Locale: en-US
Module Guid: 1da87e53-152b-403e-98dc-74d7b4d63d59
Module Name: Microsoft.PowerShell.Utility
ms.date: 04/02/2021
schema: 2.0.0
title: Microsoft.PowerShell.Utility
ms.openlocfilehash: 8053162caa516a77cc148f0866073b36bab1bd93
ms.sourcegitcommit: c91f79576bc54e162bcc7adf78026417b2776687
ms.translationtype: MT
ms.contentlocale: ja-JP
ms.lasthandoff: 04/03/2021
ms.locfileid: "106274121"
---
# Microsoft.PowerShell.Utility モジュール

## 説明

このセクションには、Microsoft. PowerShell. ユーティリティモジュールと共にインストールされるコマンドレットのヘルプトピックが含まれています。 このモジュールには、PowerShell の基本的な機能を管理するコマンドレットが含まれています。

## Microsoft. PowerShell ユーティリティコマンドレット

### [Add-Member](Add-Member.md)
PowerShell オブジェクトのインスタンスにカスタムプロパティとメソッドを追加します。

### [Add-Type](Add-Type.md)
PowerShell セッションに Microsoft .NET クラスを追加します。

### [Clear-Variable](Clear-Variable.md)
変数の値を削除します。

### [Compare-Object](Compare-Object.md)
2 つのオブジェクトのセットを比較します。

### [Convert-String](Convert-String.md)
例と一致するように文字列を書式設定します。

### [ConvertFrom-Csv](ConvertFrom-Csv.md)
コンマ区切り値 (CSV) 形式のオブジェクトのプロパティを元のオブジェクトの CSV バージョンに変換します。

### [ConvertFrom-Json](ConvertFrom-Json.md)
JSON 形式の文字列をカスタム オブジェクトに変換します。

### [ConvertFrom-SddlString](ConvertFrom-SddlString.md)
SDDL 文字列をカスタムオブジェクトに変換します。

### [ConvertFrom-String](ConvertFrom-String.md)
文字列のコンテンツから構造化されたプロパティを抽出して解析します。

### [ConvertFrom-StringData](ConvertFrom-StringData.md)
1 つまたは複数のキーと値のペアを含む文字列をハッシュ テーブルに変換します。

### [ConvertTo-Csv](ConvertTo-Csv.md)
.NET オブジェクトを一連のコンマ区切り値 (CSV) 文字列に変換します。

### [ConvertTo-Html](ConvertTo-Html.md)
.NET オブジェクトを、Web ブラウザーで表示できる HTML に変換します。

### [ConvertTo-Json](ConvertTo-Json.md)
オブジェクトを JSON 形式の文字列に変換します。

### [ConvertTo-Xml](ConvertTo-Xml.md)
オブジェクトの XML ベースの表現を作成します。

### [Debug-Runspace](Debug-Runspace.md)
実行空間を使用して、対話型デバッグセッションを開始します。

### [Disable-PSBreakpoint](Disable-PSBreakpoint.md)
現在のコンソール内のブレークポイントを無効にします。

### [Disable-RunspaceDebug](Disable-RunspaceDebug.md)
1つ以上の実行空間でのデバッグを無効にし、保留中のすべてのデバッガーを停止します。

### [Enable-PSBreakpoint](Enable-PSBreakpoint.md)
現在のコンソール内のブレークポイントを有効にします。

### [Enable-RunspaceDebug](Enable-RunspaceDebug.md)
デバッガーがアタッチされるまでブレークポイントが保持される実行空間でのデバッグを有効にします。

### [Export-Alias](Export-Alias.md)
現在定義されているエイリアスに関する情報をファイルにエクスポートします。

### [Export-Clixml](Export-Clixml.md)
1 つまたは複数のオブジェクトの XML ベースの表現を作成し、ファイルに格納します。

### [エクスポート-Csv](Export-Csv.md)
オブジェクトを一連のコンマ区切り値 (CSV) 文字列に変換し、その文字列をファイルに保存します。

### [Export-FormatData](Export-FormatData.md)
現在のセッションの書式設定データを書式設定ファイルに保存します。

### [Export-PSSession](Export-PSSession.md)
別のセッションからコマンドをエクスポートし、PowerShell モジュールに保存します。

### [Format-Custom](Format-Custom.md)
カスタマイズされたビューを使用して、出力を書式設定します。

### [Format-Hex](Format-Hex.md)
ファイルまたはその他の入力を16進数として表示します。

### [Format-List](Format-List.md)
出力の各プロパティは、新しい行に表示されるプロパティの一覧として書式設定されます。

### [Format-Table](Format-Table.md)
出力を表として書式設定します。

### [Format-Wide](Format-Wide.md)
各オブジェクトの 1 つのプロパティのみを表示する幅の広いテーブルに、オブジェクトを書式設定して表示します。

### [Get-Alias](Get-Alias.md)
現在のセッションのエイリアスを取得します。

### [Get-Culture](Get-Culture.md)
オペレーティング システムの現在のカルチャ設定を取得します。

### [取得-日付](Get-Date.md)
現在の日付と時刻を取得します。

### [Get-Event](Get-Event.md)
イベント キュー内のイベントを取得します。

### [Get-EventSubscriber](Get-EventSubscriber.md)
現在のセッションのイベント サブスクライバーを取得します。

### [Get-FileHash](Get-FileHash.md)
指定されたハッシュ アルゴリズムを使用して、ファイルのハッシュ値を計算します。

### [Get-FormatData](Get-FormatData.md)
現在のセッションの書式設定データを取得します。

### [Get-Host](Get-Host.md)
現在のホスト プログラムを表すオブジェクトを取得します。

### [Get-Member](Get-Member.md)
オブジェクトのプロパティとメソッドを取得します。

### [Get-PSBreakpoint](Get-PSBreakpoint.md)
現在のセッションで設定されたブレークポイントを取得します。

### [Get-PSCallStack](Get-PSCallStack.md)
現在の呼び出し履歴を表示します。

### [Get-Random](Get-Random.md)
乱数を取得するか、オブジェクトをコレクションからランダムに選択します。

### [Get-Runspace](Get-Runspace.md)
PowerShell ホストプロセス内のアクティブな実行空間を取得します。

### [Get-RunspaceDebug](Get-RunspaceDebug.md)
実行空間のデバッグオプションを示します。

### [Get-TraceSource](Get-TraceSource.md)
トレース用にインストルメント化された PowerShell コンポーネントを取得します。

### [Get-TypeData](Get-TypeData.md)
現在のセッションで、拡張型データを取得します。

### [Get-UICulture](Get-UICulture.md)
オペレーティングシステムの現在の UI カルチャ設定を取得します。

### [Get-Unique](Get-Unique.md)
並べ替えられたリストから一意の項目を返します。

### [Get-Variable](Get-Variable.md)
現在のコンソール内の変数を取得します。

### [Get-Verb](Get-Verb.md)
承認された PowerShell 動詞を取得します。

### [Group-Object](Group-Object.md)
指定したプロパティに対して同じ値を含むオブジェクトをグループ化します。

### [Import-Alias](Import-Alias.md)
ファイルからエイリアス一覧をインポートします。

### [Import-Clixml](Import-Clixml.md)
EXPORT-CLIXML ファイルをインポートし、対応するオブジェクトを PowerShell に作成します。

### [Import-Csv](Import-Csv.md)
コンマ区切り値 (CSV) ファイルの項目から、テーブルに似たカスタムオブジェクトを作成します。

### [Import-LocalizedData](Import-LocalizedData.md)
オペレーティング システム用に選択されている UI カルチャに基づき、言語固有のデータをスクリプトと関数にインポートします。

### [Import-PowerShellDataFile](Import-PowerShellDataFile.md)
から値をインポートします。.PSD1 ファイルの内容を呼び出しません。

### [Import-PSSession](Import-PSSession.md)
別のセッションから現在のセッションにコマンドをインポートします。

### [Invoke-Expression](Invoke-Expression.md)
ローカル コンピューター上でコマンドまたは式を実行します。

### [Invoke-RestMethod](Invoke-RestMethod.md)
RESTful Web サービスに HTTP または HTTPS 要求を送信します。

### [Invoke-WebRequest](Invoke-WebRequest.md)
インターネット上の Web ページからコンテンツを取得します。

### [Measure-Command](Measure-Command.md)
スクリプト ブロックとコマンドレットの実行に要する時間を計測します。

### [Measure-Object](Measure-Object.md)
オブジェクトの数値プロパティと、テキストのファイルなど文字列オブジェクト内の文字、単語、および行を計算します。

### [New-Alias](New-Alias.md)
新しいエイリアスを作成します。

### [New-Event](New-Event.md)
新しいイベントを作成します。

### [新規-Guid](New-Guid.md)
GUID を作成します。

### [New-Object](New-Object.md)
Microsoft .NET Framework または COM オブジェクトのインスタンスを作成します。

### [New-TemporaryFile](New-TemporaryFile.md)
一時ファイルを作成します。

### [New-TimeSpan](New-TimeSpan.md)
TimeSpan オブジェクトを作成します。

### [New-Variable](New-Variable.md)
新しい変数を作成します。

### [Out-File](Out-File.md)
ファイルに出力を送信します。

### [Out-GridView](Out-GridView.md)
別のウィンドウの対話型のテーブルに出力を送信します。

### [Out-Printer](Out-Printer.md)
プリンターに出力を送信します。

### [Out-String](Out-String.md)
入力オブジェクトを文字列として出力します。

### [Read-Host](Read-Host.md)
コンソールからの入力行を読み取ります。

### [Register-EngineEvent](Register-EngineEvent.md)
PowerShell エンジンとコマンドレットによって生成されるイベントをサブスクライブし `New-Event` ます。

### [Register-ObjectEvent](Register-ObjectEvent.md)
Microsoft .NET Framework オブジェクトによって生成されるイベントをサブスクライブします。

### [Remove-Event](Remove-Event.md)
イベントをイベント キューから削除します。

### [Remove-PSBreakpoint](Remove-PSBreakpoint.md)
現在のコンソールからブレークポイントを削除します。

### [Remove-TypeData](Remove-TypeData.md)
現在のセッションから拡張型を削除します。

### [Remove-Variable](Remove-Variable.md)
変数とその値を削除します。

### [Select-Object](Select-Object.md)
オブジェクトまたはオブジェクトのプロパティを選択します。

### [Select-String](Select-String.md)
文字列とファイル内のテキストを検索します。

### [Select-Xml](Select-Xml.md)
XML 文字列または XML ドキュメント内のテキストを検索します。

### [Send-MailMessage](Send-MailMessage.md)
電子メールを送信します。

### [Set-Alias](Set-Alias.md)
現在の PowerShell セッションで、コマンドレットまたはその他のコマンドのエイリアスを作成または変更します。

### [Set-Date](Set-Date.md)
指定する時刻にコンピューターのシステム時刻を変更します。

### [Set-PSBreakpoint](Set-PSBreakpoint.md)
行、コマンド、または変数にブレークポイントを設定します。

### [Set-TraceSource](Set-TraceSource.md)
PowerShell コンポーネントのトレースを構成、開始、および停止します。

### [変数の設定](Set-Variable.md)
変数の値を設定します。

### [Show-Command](Show-Command.md)
グラフィカルウィンドウに PowerShell コマンド情報を表示します。

### [Sort-Object](Sort-Object.md)
プロパティ値別にオブジェクトを並べ替えます。

### [Start-Sleep](Start-Sleep.md)
指定された期間、スクリプトまたはセッションでアクティビティを中断します。

### [Tee-Object](Tee-Object.md)
ファイルまたは変数にコマンドの出力を保存し、またそれをパイプラインに送信します。

### [Trace-Command](Trace-Command.md)
指定された式またはコマンドのトレースを構成し、開始します。

### [Unblock-File](Unblock-File.md)
インターネットからダウンロードされたファイルのブロックを解除します。

### [Unregister-Event](Unregister-Event.md)
イベントのサブスクリプションを取り消します。

### [Update-FormatData](Update-FormatData.md)
現在のセッションの書式設定データを更新します。

### [Update-List](Update-List.md)
オブジェクトのコレクションを格納するプロパティ値の項目を追加または削除します。

### [Update-TypeData](Update-TypeData.md)
セッションで、拡張型データを更新します。

### [Wait-Debugger](Wait-Debugger.md)
スクリプト内の次のステートメントを実行する前に、デバッガー内のスクリプトを停止します。

### [Wait-Event](Wait-Event.md)
特定のイベントが発生するまで待機してから、実行を継続します。

### [Write-Debug](Write-Debug.md)
デバッグ メッセージをコンソールに出力します。

### [Write-Error](Write-Error.md)
エラー ストリームにオブジェクトを書き込みます。

### [Write-Host](Write-Host.md)
カスタマイズした出力をホストに書き込みます。

### [Write-Information](Write-Information.md)
PowerShell がコマンドの情報ストリームデータを処理する方法を指定します。

### [Write-Output](Write-Output.md)
指定されたオブジェクトをパイプラインの次のコマンドに送信します。

### [Write-Progress](Write-Progress.md)
PowerShell コマンドウィンドウ内の進行状況バーを表示します。

### [Write-Verbose](Write-Verbose.md)
テキストを詳細メッセージ ストリームに書き込みます。

### [Write-Warning](Write-Warning.md)
警告メッセージを書き込みます。
